Fix typo in httpd.conf that stops RADIUSdesk viewer component from displaying

--- a/conf/apache/httpd.conf
+++ b/conf/apache/httpd.conf
@@ -1011,7 +1011,7 @@ BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 
 
 ## -- RadiusDESK begin
-<Directory  /var/www/html/c2>
+<Directory  /var/www/html/cake2>
     AllowOverride All
 </Directory>
 #-------COMPRESS CONTENT-----------
