Fix Bug: php.ini timezone setting

--- a/conf/php.ini
+++ b/conf/php.ini
@@ -945,7 +945,7 @@ default_socket_timeout = 60
 ; Defines the default timezone used by the date functions
 ; http://www.php.net/manual/en/datetime.configuration.php#ini.date.timezone
 ;date.timezone =
-date.timezone = "UTC"
+date.timezone = UTC
 
 ; http://www.php.net/manual/en/datetime.configuration.php#ini.date.default-latitude
 ;date.default_latitude = 31.7667
