Cleanup Startup issues with Nginx on Ubuntu

--- a/conf/nginx/default.conf
+++ b/conf/nginx/default.conf
@@ -46,8 +46,8 @@ server {
 
 	## RADIUSDESK Specific - Mfawa Alfred Onen
 	location ~* ^.+\.(jpg|jpeg|gif|png|ico|js|css)$ { 
-		rewrite ^/c2/rd_cake/webroot/(.*)$ /c2/rd_cake/webroot/$1 break; 
-		rewrite ^/c2/rd_cake/(.*)$ /c2/rd_cake/webroot/$1 break; 
+		rewrite ^/cake2/rd_cake/webroot/(.*)$ /cake2/rd_cake/webroot/$1 break; 
+		rewrite ^/cake2/rd_cake/(.*)$ /cake2/rd_cake/webroot/$1 break; 
 		access_log off; 
 		expires max; 
 		add_header Cache-Control public; 
