--- a/conf/nginx/ubuntu_default.conf
+++ b/conf/nginx/ubuntu_default.conf
@@ -46,11 +46,11 @@ server {
 
 	## RADIUSDESK Specific - Mfawa Alfred Onen
 	location ~* ^.+\.(jpg|jpeg|gif|png|ico|js|css)$ { 
-		rewrite ^/c2/rd_cake/webroot/(.*)$ /c2/rd_cake/webroot/$1 break; 
-		rewrite ^/c2/rd_cake/(.*)$ /c2/rd_cake/webroot/$1 break; 
+		rewrite ^/cake2/rd_cake/webroot/(.*)$ /cake2/rd_cake/webroot/$1 break; 
+		rewrite ^/cake2/rd_cake/(.*)$ /cake2/rd_cake/webroot/$1 break; 
 		access_log off; 
 		expires max; 
-		add_header Cache-Control public; 
+		add_header Cache-Control public;
 	} 
 
 	location /cake2/rd_cake { 
