--- a/conf/nginx/ubuntu_nginx.conf
+++ b/conf/nginx/ubuntu_nginx.conf
@@ -2,7 +2,7 @@
 #   * Official English Documentation: http://nginx.org/en/docs/
 #   * Official Russian Documentation: http://nginx.org/ru/docs/
 
-user              nginx;
+user              www-data;
 worker_processes  4;
 
 error_log  /var/log/nginx/error.log;
@@ -49,4 +49,6 @@ http {
     # The default server is in conf.d/default.conf
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
+	
+	types_hash_max_size 8192;
 }
