--- a/conf/php-fpm/www.conf
+++ b/conf/php-fpm/www.conf
@@ -223,5 +223,5 @@ php_admin_flag[log_errors] = on
 
 ; Set session path to a directory owned by process user
 php_value[session.save_handler] = files
-php_value[session.save_path] = /var/lib/php/session
+php_value[session.save_path] = /tmp
 
