--- a/conf/php.ini
+++ b/conf/php.ini
@@ -1266,7 +1266,8 @@ session.save_handler = files
 ; where MODE is the octal representation of the mode. Note that this
 ; does not overwrite the process's umask.
 ; http://www.php.net/manual/en/session.configuration.php#ini.session.save-path
-session.save_path = "/var/lib/php/session"
+;session.save_path = "/var/lib/php/session"
+session.save_path = "/tmp"
 
 ; Whether to use cookies.
 ; http://www.php.net/manual/en/session.configuration.php#ini.session.use-cookies
