--- a/roles/radiusdesk/vars/RedHat.yml
+++ b/roles/radiusdesk/vars/RedHat.yml
@@ -61,7 +61,7 @@ rd_cake_svn_repo: "http://svn.code.sf.net/p/radiusdesk/code/trunk/rd_cake"
 rd_login_svn_repo: "http://svn.code.sf.net/p/radiusdesk/code/trunk/rd_login"
 extjs_src_url: "https://sourceforge.net/p/radiusdesk/code/HEAD/tree/extjs/ext-6-sencha_cmd.tar.gz?format=raw"
 extjs_src_md5_sum: "e829741694be90a27d7f0c6a24dbfc8b"
-rd_svn_revision: 1633
+rd_svn_revision: 1620
 
 # Freeradius Packages (RHEL/CentOS 6.x/7.x)
 freeradius_pkgs:
@@ -83,6 +83,7 @@ freeradius_service_name: radiusd
 freeradius_user: radiusd
 freeradius_group: radiusd
 freeradius_log_dir: "/var/log/radius"
+freeradius_radclient: "/usr/bin/radclient"
 allow_vulnerable_openssl: yes
 
 # Radiusdesk Database (RHEL/CentOS 6.x/7.x)
@@ -133,7 +134,10 @@ coovachilii_uam_port: 3990
 coovachilii_uam_secret: "greatsecret"
 coovachilii_radius_server1: "localhost"
 coovachilii_radius_server2: "localhost"
+coovachilli_radius_secret: "testing123"
 coovachilii_dns_server1: "208.67.222.222"
 coovachilii_dns_server2: "208.67.220.220"
 coovachilii_user: "chilli"
 coovachilii_group: "chilli"
+coovachilli_coaport: 3799
+
