--- a/roles/radiusdesk/tasks/Freeradius_RedHat.yml
+++ b/roles/radiusdesk/tasks/Freeradius_RedHat.yml
@@ -25,7 +25,7 @@
 
 - name: Extracting RadiusDesk Freeradius Configuration (RHEL/CentOS 6.x/7.x)
   unarchive:
-    src="{{ nginx_webroot }}/cake2/rd_cake/Setup/Radius/raddb_rd.tar.gz"
+    src="{{ nginx_webroot }}/cake2/rd_cake/Setup/Radius/freeradius-3-radiusdesk.tar.gz"
     dest={{ temp_src_dir }}/
     owner={{ freeradius_user }}
     group={{ freeradius_group }}
@@ -34,7 +34,7 @@
 
 - name: Configuring Freeradius Configuration Directory (RHEL/CentOS 6.x/7.x)
   shell: 
-    "mv {{ temp_src_dir | quote }}/raddb {{ freeradius_conf_dir | quote }} &&
+    "mv {{ temp_src_dir | quote }}/freeradius {{ freeradius_conf_dir | quote }}/raddb &&
     chown -R {{ freeradius_user | quote }}:{{ freeradius_group | quote }} {{ freeradius_conf_dir | quote }} &&
     chmod -R 0755 {{ freeradius_conf_dir | quote }}"
 
@@ -60,35 +60,13 @@
     mode=0777
     src="radius/checkrad.j2"
 
-- name: Configuring RadiusDesk Freeradius Policy (RHEL/CentOS 6.x/7.x)
-  copy: 
-    dest={{ freeradius_sbin_dir }}
-    owner={{ freeradius_user }}
-    group={{ freeradius_group }}
-    mode=0664
-    src="policy.conf"
-
 - name: Configuring RadiusDesk Freeradius Dynamic Clients (RHEL/CentOS 6.x/7.x)
-  copy: 
-    dest="{{ freeradius_conf_dir }}/sites-enabled"
+  template: 
+    dest="{{ freeradius_conf_dir }}/sites-enabled/dynamic-clients"
     owner={{ freeradius_user }}
     group={{ freeradius_group }}
     mode=0644
-    src="dynamic-clients"
-
-- name: Ensuring RAW module has been Instantiated by Freeradius (RHEL/CentOS 6.x/7.x)
-  stat: 
-    path="{{ freeradius_conf_dir }}/modules/raw"
-  register: raw_file
-
-- name: Instantiating RAW module for Freeradius (RHEL/CentOS 6.x/7.x)
-  lineinfile: 
-    dest: "{{ freeradius_conf_dir }}/modules/raw"
-    regexp: '^'
-    line: "raw {\n\n}"
-    state: present
-    create: yes
-  when: raw_file.stat.exists == False
+    src="radius/dynamic-clients.j2"
 
 - name: Correcting radclient paths for radscenario.pl Script (RHEL/CentOS 6.x/7.x)
   template: 
@@ -102,6 +80,22 @@
     group={{ web_group }}
     owner={{ web_user }}
     src=RadiusDesk.php.j2
+    validate='php -l %s'
+
+- name: Correcting MESHDesk paths for Freeradius (RHEL/CentOS 6.x/7.x)
+  template:
+    dest="{{ nginx_webroot }}/cake2/rd_cake/Config/MESHdesk.php"
+    group={{ web_group }}
+    owner={{ web_user }}
+    src=MESHdesk.php.j2
+    validate='php -l %s'
+
+- name: Correcting APProfiles paths for Freeradius (RHEL/CentOS 6.x/7.x)
+  template:
+    dest="{{ nginx_webroot }}/cake2/rd_cake/Config/ApProfiles.php"
+    group={{ web_group }}
+    owner={{ web_user }}
+    src=ApProfiles.php.j2
     validate='php -l %s'
 
 - name: Configuring radmin_wrapper.pl Script for RadiusDesk (RHEL/CentOS 6.x/7.x)
