--- a/roles/radiusdesk/vars/Debian.yml
+++ b/roles/radiusdesk/vars/Debian.yml
@@ -75,6 +75,7 @@ freeradius_user: freerad
 freeradius_group: freerad
 freeradius_log_dir: "/var/log/freeradius"
 freeradius_radclient: "/usr/bin/radclient"
+freeradius_secret: "testing123"
 allow_vulnerable_openssl: yes
 
 # Radiusdesk Database (Debian/Ubuntu)
@@ -128,7 +129,6 @@ coovachilii_uam_port: 3990
 coovachilii_uam_secret: "greatsecret"
 coovachilii_radius_server1: "localhost"
 coovachilii_radius_server2: "localhost"
-coovachilli_radius_secret: "testing123"
 coovachilii_dns_server1: "208.67.222.222"
 coovachilii_dns_server2: "208.67.220.220"
 coovachilii_user: "chilli"
