--- a/roles/radiusdesk/vars/Debian.yml
+++ b/roles/radiusdesk/vars/Debian.yml
@@ -1,27 +1,38 @@
 ---
-# Apache (Debian/Ubuntu)
+# Apache (Ubuntu 14+)
 apache_pkg_name: apache2
 
-# RadiusDesk Packages (Debian/Ubuntu)
+# RadiusDesk Packages (Ubuntu 14+)
 rd_pkgs:
  - language-pack-en-base
  - language-pack-af
  - language-pack-fa
- - php5-fpm
  - mysql-server
  - mysql-client
- - php5-mysql
  - python-mysqldb
- - php5-xcache
- - php5-cli
- - php5-gd
- - php5-curl
  - subversion
  - git
  - unzip
  - tar
 
-# Nginx (Debian/Ubuntu)
+# RadiusDesk PHP5 Packages (Ubuntu 14+)
+rd_php5_pkgs:
+ - php5-fpm
+ - php5-mysql
+ - php5-xcache
+ - php5-cli
+ - php5-gd
+ - php5-curl
+
+# RadiusDesk PHP7 Packages (Ubuntu 14+)
+rd_php7_pkgs:
+ - php7.0-fpm
+ - php7.0-mysql
+ - php7.0-cli
+ - php7.0-gd
+ - php7.0-curl
+
+# Nginx (Ubuntu 14+)
 nginx_pkg_name: nginx
 nginx_service_name: nginx
 nginx_webroot: "/usr/share/nginx/html"
@@ -30,43 +41,52 @@ nginx_default_config: "/etc/nginx/sites-enabled/default"
 nginx_worker_processes: 4
 nginx_user: www-data
 
-# PHP-FPM (Debian/Ubuntu)
+# General PHP (Ubuntu 14+)
+php_session_save_path: "/tmp"
+php_timezone: "Africa/Lagos"
+
+# PHP5-FPM (Ubuntu 14+)
 php_fpm_service_name: php5-fpm
 php_fpm_config: "/etc/php5/fpm/pool.d/www.conf"
 php_fpm_socket: "/var/run/php5-fpm.sock"
-php_session_save_path: "/tmp"
 php_config_file: "/etc/php5/cli/php.ini"
-php_timezone: "Africa/Lagos"
 
-# Web server (Debian/Ubuntu)
+
+# PHP7-FPM (Ubuntu 14+)
+php7_fpm_service_name: php7.0-fpm
+php7_fpm_config: "/etc/php/7.0/fpm/pool.d/www.conf"
+php7_fpm_socket: "/var/run/php/php7.0-fpm.sock"
+php7_config_file: "/etc/php/7.0/cli/php.ini"
+
+# Web server (Ubuntu 14+)
 web_user: www-data
 web_group: www-data
 
 # Temporary Download Directory
 temp_src_dir: "/tmp/rd_sources"
 
-# Radiusdesk Sources Repo Paths (Debian/Ubuntu)
+# Radiusdesk Sources Repo Paths (Ubuntu 14+)
 cakephp_git_repo: "https://github.com/cakephp/cakephp.git"
 rd_svn_repo: "http://svn.code.sf.net/p/radiusdesk/code/trunk/rd"
 rd_cake_svn_repo: "http://svn.code.sf.net/p/radiusdesk/code/trunk/rd_cake"
 rd_login_svn_repo: "http://svn.code.sf.net/p/radiusdesk/code/trunk/rd_login"
 extjs_src_url: "https://sourceforge.net/p/radiusdesk/code/HEAD/tree/extjs/ext-6-sencha_cmd.tar.gz?format=raw"
 extjs_src_md5_sum: "e829741694be90a27d7f0c6a24dbfc8b"
-rd_svn_revision: 1620
+rd_svn_revision: 1880
 
-# Freeradius Packages (Debian/Ubuntu)
+# Freeradius Packages (Ubuntu 14+)
 freeradius_pkgs:
- - "freeradius=2.2.9-rd*"
- - "freeradius-utils=2.2.9-rd*"
- - "freeradius-mysql=2.2.9-rd*"
- - "freeradius-ldap=2.2.9-rd*"
- - "freeradius-krb5=2.2.9-rd*"
- - "freeradius-common=2.2.9-rd*"
+ - "freeradius=3.0.11-ppa3*"
+ - "freeradius-utils=3.0.11-ppa3*"
+ - "freeradius-mysql=3.0.11-ppa3*"
+ - "freeradius-ldap=3.0.11-ppa3*"
+ - "freeradius-krb5=3.0.11-ppa3*"
+ - "freeradius-common=3.0.11-ppa3*"
  - libnet-telnet-perl
 
-# Freeradius (Debian/Ubuntu)
+# Freeradius (Ubuntu 14+)
 freeradius_conf_dir: "/etc/freeradius"
-freeradius_prefix_path: ""
+freeradius_prefix_path: "/usr"
 freeradius_sbin_dir: "/usr/sbin"
 freeradius_bin_dir: "/usr/bin"
 freeradius_shared_dir: "/usr/share/freeradius"
@@ -75,14 +95,15 @@ freeradius_user: freerad
 freeradius_group: freerad
 freeradius_log_dir: "/var/log/freeradius"
 freeradius_radclient: "/usr/bin/radclient"
+freeradius_secret: "testing123"
 allow_vulnerable_openssl: yes
 
-# Radiusdesk Database (Debian/Ubuntu)
+# Radiusdesk Database (Ubuntu 14+)
 rd_db_user: rd
 rd_db_password: rd
 rd_db_name: rd
 
-# MySQL (Debian/Ubuntu)
+# MySQL (Ubuntu 14+)
 mysql_old_root_password: ""
 mysql_root_password: root
 mysql_service_name: mysql
@@ -91,7 +112,7 @@ mysql_db_hosts:
  - localhost
 mysql_my_cnf: "~/.my.cnf"
 
-# Nodejs Packages (Debian/Ubuntu)
+# Nodejs Packages (Ubuntu 14+)
 nodejs_pkgs:
  - python-software-properties
  - software-properties-common
@@ -99,7 +120,7 @@ nodejs_pkgs:
  - make
  - nodejs
 
-# Nodejs Modules (Debian/Ubuntu)
+# Nodejs Modules (Ubuntu 14+)
 nodejs_npm_modules:
  - tail
  - connect
@@ -128,7 +149,6 @@ coovachilii_uam_port: 3990
 coovachilii_uam_secret: "greatsecret"
 coovachilii_radius_server1: "localhost"
 coovachilii_radius_server2: "localhost"
-coovachilli_radius_secret: "testing123"
 coovachilii_dns_server1: "208.67.222.222"
 coovachilii_dns_server2: "208.67.220.220"
 coovachilii_user: "chilli"
@@ -136,7 +156,7 @@ coovachilii_group: "chilli"
 coovachilli_coaport: 3799
 
 # MAO Repository
-mao_apt_ppa_repo: "ppa:muffycompoqm/rd-installer"
+mao_apt_ppa_repo: "ppa:muffycompoqm/rd-installer-fr3"
 mao_apt_repo_key: "http://apt.maomuffy.com/ubuntu/apt_keys/rd_installer_mao.asc"
 
 # NodeJS Repository
