--- a/roles/radiusdesk/handlers/main.yml
+++ b/roles/radiusdesk/handlers/main.yml
@@ -17,9 +17,21 @@
     state=started
     enabled=yes
 
+- name: Start PHP7-FPM
+  service:
+    name={{ php7_fpm_service_name }}
+    state=started
+    enabled=yes
+
 - name: Restart PHP-FPM
   service:
     name={{ php_fpm_service_name }}
+    state=restarted
+    enabled=yes
+
+- name: Restart PHP7-FPM
+  service:
+    name={{ php7_fpm_service_name }}
     state=restarted
     enabled=yes
 
