--- a/roles/radiusdesk/tasks/Nodejs_RedHat.yml
+++ b/roles/radiusdesk/tasks/Nodejs_RedHat.yml
@@ -1,11 +1,11 @@
 ---
-- name: "Installing Nodejs & NPM for RadiusDesk (RHEL/CentOS 6.x/7.x)"
+- name: "Installing Nodejs & NPM for RadiusDesk (RHEL/CentOS 6+)"
   yum:
     name={{ item }}
     state=installed
   with_items: "{{ nodejs_pkgs }}"
 
-- name: "Installing Nodejs modules (tail,forever,mysql,connect) for RadiusDesk (RHEL/CentOS 6.x/7.x)"
+- name: "Installing Nodejs modules (tail,forever,mysql,connect) for RadiusDesk (RHEL/CentOS 6+)"
   npm:
     name={{ item }}
     state=present
@@ -13,7 +13,7 @@
     production=yes
   with_items: "{{ nodejs_npm_modules }}"
 
-- name: "Installing Nodejs modules (socket.io) for RadiusDesk (RHEL/CentOS 6.x/7.x)"
+- name: "Installing Nodejs modules (socket.io) for RadiusDesk (RHEL/CentOS 6+)"
   npm:
     name="socket.io"
     state=present
@@ -21,7 +21,7 @@
     production=yes
     version="0.9.*"
 
-- name: Configuring Nodejs Freeradius Logfile Viewer for RadiusDesk (RHEL/CentOS 6.x/7.x)
+- name: Configuring Nodejs Freeradius Logfile Viewer for RadiusDesk (RHEL/CentOS 6+)
   template: 
     dest="{{ nginx_webroot }}/cake2/rd_cake/Setup/Node.js/Logfile.node.js"
     owner={{ web_user }}
@@ -29,13 +29,13 @@
     mode=0644
     src="nodejs/Logfile.node.js.j2"
 
-- name: Configuring Nodejs Socket.io Startup Script for RadiusDesk (RHEL/CentOS 6.x/7.x)
+- name: Configuring Nodejs Socket.io Startup Script for RadiusDesk (RHEL/CentOS 6+)
   template: 
     dest="/etc/init.d/nodejs-socket-io"
     mode=0755
     src="nodejs/nodejs-socket-io.j2"
 
-- name: Installing Nodejs Socket.io Service (RHEL/CentOS 6.x/7.x)
+- name: Installing Nodejs Socket.io Service (RHEL/CentOS 6+)
   shell: chkconfig --add {{ nodejs_socketio_service_name }}
   notify:
     - Restart Nodejs Socketio
