--- a/roles/radiusdesk/tasks/Pptpd_RedHat.yml
+++ b/roles/radiusdesk/tasks/Pptpd_RedHat.yml
@@ -1,15 +1,15 @@
 ---
-- name: Installing PPTPD Server for RadiusDesk (RHEL/CentOS 6.x/7.x)
+- name: Installing PPTPD Server for RadiusDesk (RHEL/CentOS 6+)
   yum:
     name="pptpd"
     state=present
 
-- name: Configuring PPTPD Server for RadiusDesk (RHEL/CentOS 6.x/7.x)
+- name: Configuring PPTPD Server for RadiusDesk (RHEL/CentOS 6+)
   template: 
     dest="/etc/pptpd.conf"
     src="pptpd/pptpd.conf.j2"
 
-- name: Configuring RadiusDesk to Use PPTPD Server (RHEL/CentOS 6.x/7.x)
+- name: Configuring RadiusDesk to Use PPTPD Server (RHEL/CentOS 6+)
   template:
     dest="{{ nginx_webroot }}/cake2/rd_cake/Config/RadiusDesk.php"
     group={{ web_group }}
@@ -17,7 +17,7 @@
     src=RadiusDesk.php.j2
     validate='php -l %s'
 
-- name: Ensuring PPTPD Client is writeable by Web Server User (RHEL/CentOS 6.x/7.x)
+- name: Ensuring PPTPD Client is writeable by Web Server User (RHEL/CentOS 6+)
   shell:
     "chown root:{{ web_group }} {{ pptpd_client_dir }}/chap-secrets &&
     chmod 0664 {{ pptpd_client_dir }}/chap-secrets
